# gtk-mvvm-sample

./: .editorconfig  README.md  com.github.nahuelwexd.GtkMvvmSample.json  meson.build
data/: com.github.nahuelwexd.GtkMvvmSample.appdata.xml.in  com.github.nahuelwexd.GtkMvvmSample.desktop.in  com.github.nahuelwexd.GtkMvvmSample.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: app.vala  gtk-mvvm-sample.gresource.xml  gtk_mvvm_sample.gresource.xml  meson.build  styles.css
src/models/: student.vala
src/utils/: generic-list-model.vala  observable-list.vala
src/view-models/: student-view-model.vala
src/views/: student-view.ui  student-view.vala
src/widgets/: student-item.ui  student-item.vala  student-list-row.ui  student-list-row.vala
src/windows/: main-window.ui  main-window.vala
vapi/: config.vapi
